Accessibility: remove inappropriate blockquotes (#3683)
closes #3653

---------

Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/grover-algorithm-description.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/grover-algorithm-description.ipynb
@@ -61,11 +61,11 @@
     "The algorithm refers to a number $t,$ which is the number of *iterations* it performs (and therefore the number of *queries* to the function $f$ it requires).\n",
     "This number $t$ isn't specified by Grover's algorithm as we're describing it, and we'll discuss later in the lesson how it can be chosen.\n",
     "\n",
-    "> **Grover's algorithm**\n",
-    ">\n",
-    "> 1. Initialize an $n$ qubit register $\\mathsf{Q}$ to the all-zero state $\\vert 0^n \\rangle$ and then apply a Hadamard operation to each qubit of $\\mathsf{Q}.$\n",
-    "> 2. Apply $t$ times the unitary operation $G = H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n} Z_f$ to the register $\\mathsf{Q}$\n",
-    "> 3. Measure the qubits of $\\mathsf{Q}$ with respect to standard basis measurements and output the resulting string.\n",
+    "<Figure title=\"Grover's algorithm\">\n",
+    "1. Initialize an $n$ qubit register $\\mathsf{Q}$ to the all-zero state $\\vert 0^n \\rangle$ and then apply a Hadamard operation to each qubit of $\\mathsf{Q}.$\n",
+    "2. Apply $t$ times the unitary operation $G = H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n} Z_f$ to the register $\\mathsf{Q}$\n",
+    "3. Measure the qubits of $\\mathsf{Q}$ with respect to standard basis measurements and output the resulting string.\n",
+    "</Figure>\n",
     "\n",
     "The operation $G = H^{\\otimes n} Z_{\\mathrm{OR}} H^{\\otimes n} Z_f$ iterated in step 2 will be called the *Grover operation* throughout the remainder of this lesson.\n",
     "Here is a quantum circuit representation of the Grover operation when $n=7\\!:$\n",
