--- a/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/unstructured-search.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/unstructured-search.ipynb
@@ -65,18 +65,20 @@
     "\n",
     "Here's a precise statement of the problem, which is named *Search* because we're searching for a solution, meaning a string $x$ that causes $f$ to evaluate to $1.$\n",
     "\n",
-    "> **Search**\\\n",
-    "> Input: a function $f:\\Sigma^n\\rightarrow\\Sigma$\\\n",
-    "> Output: a string $x\\in\\Sigma^n$ satisfying $f(x) = 1,$ or \"no solution\" if no such string $x$ exists\n",
+    "<Figure title=\"Search\">\n",
+    "Input: a function $f:\\Sigma^n\\rightarrow\\Sigma$\\\n",
+    "Output: a string $x\\in\\Sigma^n$ satisfying $f(x) = 1,$ or \"no solution\" if no such string $x$ exists\n",
+    "</Figure>\n",
     "\n",
     "Notice that this is *not* a promise problem — the function $f$ is arbitrary.\n",
     "It will, however, be helpful to consider the following promise variant of the problem, where we're guaranteed that there's exactly one solution.\n",
     "This problem appeared as an example of a promise problem in the *Quantum query algorithms* lesson.\n",
     "\n",
-    "> **Unique search**\\\n",
-    "> Input: a function of the form $f:\\Sigma^n \\rightarrow \\Sigma$\\\n",
-    "> Promise: there is exactly one string $z\\in\\Sigma^n$ for which $f(z) = 1,$ with $f(x) = 0$ for all strings $x\\neq z$\\\n",
-    "> Output: the string $z$\n",
+    "<Figure title=\"Unique search\">\n",
+    "Input: a function of the form $f:\\Sigma^n \\rightarrow \\Sigma$\\\n",
+    "Promise: there is exactly one string $z\\in\\Sigma^n$ for which $f(z) = 1,$ with $f(x) = 0$ for all strings $x\\neq z$\\\n",
+    "Output: the string $z$\n",
+    "</Figure>\n",
     "\n",
     "Also notice that the *Or* problem mentioned in the same lesson is closely related to *Search*.\n",
     "For that problem, the goal is simply to determine whether or not a solution exists, as opposed to actually finding a solution."
