--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
@@ -40,10 +40,11 @@
     "For the Deutsch-Jozsa problem, we simply don't worry about functions like this — they're considered to be \"don't care\" inputs.\n",
     "That is, for this problem we have a *promise* that $f$ is either constant or balanced.\n",
     "\n",
-    "> **Deutsch-Jozsa problem** \\\n",
-    "> Input: a function $f:\\{0,1\\}^n\\rightarrow\\{0,1\\}$ \\\n",
-    "> Promise: $f$ is either constant or balanced \\\n",
-    "> Output: $0$ if $f$ is constant, $1$ if $f$ is balanced\n",
+    "<Figure title=\"Deutsch-Jozsa problem\">\n",
+    "Input: a function $f:\\{0,1\\}^n\\rightarrow\\{0,1\\}$ \\\n",
+    "Promise: $f$ is either constant or balanced \\\n",
+    "Output: $0$ if $f$ is constant, $1$ if $f$ is balanced\n",
+    "</Figure>\n",
     "\n",
     "The Deutsch-Jozsa algorithm, with its single query, solves this problem in the following sense:\n",
     "if every one of the $n$ measurement outcomes is $0,$ then the function $f$ is constant;\n",
@@ -200,10 +201,11 @@
     "\n",
     "With this notation in hand we can now define the Bernstein-Vazirani problem.\n",
     "\n",
-    "> **Bernstein-Vazirani problem** \\\n",
-    "> Input: a function $f:\\{0,1\\}^n\\rightarrow\\{0,1\\}$ \\\n",
-    "> Promise: there exists a binary string $s = s_{n-1} \\cdots s_0$ for which $f(x) = s\\cdot x$ for all $x\\in\\Sigma^n$ \\\n",
-    "> Output: the string $s$\n",
+    "<Figure title=\"Bernstein-Vazirani problem\">\n",
+    "Input: a function $f:\\{0,1\\}^n\\rightarrow\\{0,1\\}$ \\\n",
+    "Promise: there exists a binary string $s = s_{n-1} \\cdots s_0$ for which $f(x) = s\\cdot x$ for all $x\\in\\Sigma^n$ \\\n",
+    "Output: the string $s$\n",
+    "</Figure>\n",
     "\n",
     "We don't actually need a new quantum algorithm for this problem; the Deutsch-Jozsa algorithm solves it.\n",
     "In the interest of clarity, let's refer to the quantum circuit from above, which doesn't include the classical post-processing step of computing the OR, as the *Deutsch-Jozsa circuit*.\n",
