--- a/learning/courses/general-formulation-of-quantum-information/general-measurements/naimark-theorem.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/general-measurements/naimark-theorem.ipynb
@@ -41,7 +41,9 @@
     "\n",
     "The fact that every measurement can be implemented in this way is pretty simple to prove, but we're going to need a fact concerning positive semidefinite matrices first.\n",
     "\n",
-    "> **Fact.** Suppose $P$ is an $n \\times n$ positive semidefinite matrix. There exists a unique $n\\times n$ positive semidefinite matrix $Q$ for which $Q^2 = P.$ This unique positive semidefinite matrix is called the *square root* of $P$ and is denoted $\\sqrt{P}.$\n",
+    "<Figure title=\"Fact\">\n",
+    "Suppose $P$ is an $n \\times n$ positive semidefinite matrix. There exists a unique $n\\times n$ positive semidefinite matrix $Q$ for which $Q^2 = P.$ This unique positive semidefinite matrix is called the *square root* of $P$ and is denoted $\\sqrt{P}.$\n",
+    "</Figure>\n",
     "\n",
     "One way to find the square root of a positive semidefinite matrix is to first compute a spectral decomposition.\n",
     "\n",
