--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity.ipynb
@@ -24,17 +24,19 @@
     "At first glance, the definition that follows might look unusual or mysterious, and perhaps not easy to work with.\n",
     "The function it defines, however, turns out to have many interesting properties and multiple alternative formulations, making it much nicer to work with than it may initially appear.\n",
     "\n",
-    "> **Definition.**\n",
-    "> Let $\\rho$ and $\\sigma$ be density matrices representing quantum states of the same system.\n",
-    "> The *fidelity* between $\\rho$ and $\\sigma$ is defined as\n",
-    "> $$\n",
-    "> \\operatorname{F}(\\rho,\\sigma) = \\operatorname{Tr}\\sqrt{\\sqrt{\\rho} \\sigma \\sqrt{\\rho}}.\n",
-    "> $$\n",
+    "<Figure title=\"Definition\">\n",
+    "Let $\\rho$ and $\\sigma$ be density matrices representing quantum states of the same system.\n",
+    "The *fidelity* between $\\rho$ and $\\sigma$ is defined as\n",
+    "$$\n",
+    "\\operatorname{F}(\\rho,\\sigma) = \\operatorname{Tr}\\sqrt{\\sqrt{\\rho} \\sigma \\sqrt{\\rho}}.\n",
+    "$$\n",
+    "</Figure>\n",
     "\n",
-    "> **Remark.**\n",
-    "> Although this is a common definition, it is also common that the fidelity is defined as the *square* of the quantity defined here, which is then referred to as the *root-fidelity*.\n",
+    "<Figure title=\"Remark\">\n",
+    "Although this is a common definition, it is also common that the fidelity is defined as the *square* of the quantity defined here, which is then referred to as the *root-fidelity*.\n",
     "Neither definition is right or wrong — it's essentially a matter of preference.\n",
     "Nevertheless, one must always be careful to understand or clarify which definition is being used.\n",
+    "</Figure>\n",
     "\n",
     "To make sense of the formula in the definition, notice first that $\\sqrt{\\rho} \\sigma \\sqrt{\\rho}$ is a positive semidefinite matrix:\n",
     "\n",
@@ -236,12 +238,13 @@
     "To conclude the lesson, we'll take a look at *Uhlmann's theorem*, which is a fundamental fact about the fidelity that connects it with the notion of a purification.\n",
     "What the theorem says, in simple terms, is that the fidelity between any two quantum states is equal to the *maximum* inner product (in absolute value) between two purifications of those states.\n",
     "\n",
-    "> **Theorem** (Uhlmann's theorem).\n",
-    "> Let $\\rho$ and $\\sigma$ be density matrices representing states of a system $\\mathsf{X},$ and let $\\mathsf{Y}$ be a system having at least as many classical states as $\\mathsf{X}.$ The fidelity between $\\rho$ and $\\sigma$ is given by\n",
-    "> $$\n",
-    ">  \\operatorname{F}(\\rho,\\sigma) = \\max\\bigl\\{ \\vert \\langle \\phi \\vert \\psi \\rangle \\vert \\,:\\, \\operatorname{Tr}_{\\mathsf{Y}}\\bigl(\\vert\\phi\\rangle\\langle\\phi\\vert\\bigr) = \\rho,\\; \\operatorname{Tr}_{\\mathsf{Y}}\\bigl(\\vert\\psi\\rangle\\langle\\psi\\vert\\bigr) = \\sigma\\bigr\\},\n",
-    "> $$\n",
-    "> where the maximum is taken over all quantum state vectors $\\vert\\phi\\rangle$ and $\\vert\\psi\\rangle$ of $(\\mathsf{X},\\mathsf{Y}).$\n",
+    "<Figure title=\"Theorem\">\n",
+    "Uhlmann's theorem: Let $\\rho$ and $\\sigma$ be density matrices representing states of a system $\\mathsf{X},$ and let $\\mathsf{Y}$ be a system having at least as many classical states as $\\mathsf{X}.$ The fidelity between $\\rho$ and $\\sigma$ is given by\n",
+    "$$\n",
+    " \\operatorname{F}(\\rho,\\sigma) = \\max\\bigl\\{ \\vert \\langle \\phi \\vert \\psi \\rangle \\vert \\,:\\, \\operatorname{Tr}_{\\mathsf{Y}}\\bigl(\\vert\\phi\\rangle\\langle\\phi\\vert\\bigr) = \\rho,\\; \\operatorname{Tr}_{\\mathsf{Y}}\\bigl(\\vert\\psi\\rangle\\langle\\psi\\vert\\bigr) = \\sigma\\bigr\\},\n",
+    "$$\n",
+    "where the maximum is taken over all quantum state vectors $\\vert\\phi\\rangle$ and $\\vert\\psi\\rangle$ of $(\\mathsf{X},\\mathsf{Y}).$\n",
+    "</Figure>\n",
     "\n",
     "We can prove this theorem using the unitary equivalence of purifications — but it isn't completely straightforward and we'll make use of a trick along the way.\n",
     "\n",
