--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -283,13 +283,11 @@
     "\n",
     "   Note that $n$ is common to both public key and private key, and is known as the modulus. We will need to use this later.\n",
     "\n",
-    "   <details>\n",
-    "\n",
-    "   <summary>\n",
-    "\n",
+    "<details>\n",
+    "    <summary>\n",
     "   Mathematical detail\n",
-    "\n",
     "   </summary>\n",
+    "\n",
     "\n",
     "   - Choose two distinct prime numbers, $p$ and $q$.\n",
     "     - chosen at random (for security).\n",
@@ -347,13 +345,10 @@
     "   - Alice wishes to send a message $M$ to Bob. In this case a simple integer\n",
     "   - Alice uses Bob's public key $(e, n)$ to encrypt the message into ciphertext $C$\n",
     "\n",
-    "\n",
     "   <details>\n",
     "\n",
     "   <summary>\n",
-    "\n",
     "   Mathematical detail\n",
-    "\n",
     "   </summary>\n",
     "\n",
     "   - $M$ is an [integer][intrep] $0 ≤ M < n$.\n",
@@ -375,13 +370,9 @@
     "   - Bob receives the ciphertext $C$\n",
     "   - Bob uses his private key $(d, n)$ to decrypt the message back into message $M$\n",
     "\n",
-    "\n",
     "   <details>\n",
-    "\n",
     "   <summary>\n",
-    "\n",
     "   Mathematical detail\n",
-    "\n",
     "   </summary>\n",
     "\n",
     "   - $M ≡ C^d (mod n)$.\n",
@@ -411,7 +402,9 @@
     "\n",
     "In the following code cells, we illustrate a simple example of the RSA algorithm using small integers and then demonstrate practical key distribution and digital signature applications using Python libraries implementing RSA.\n",
     "\n",
-    "> Note: In this section we will show the math calculations in detail as part of the Python code\n",
+    "<Admonition type=\"note\">\n",
+    "Note: In this section we will show the math calculations in detail as part of the Python code\n",
+    "</Admonition>\n",
     "\n",
     "#### RSA key generation\n",
     "\n",
@@ -1288,10 +1281,9 @@
     "<details>\n",
     "\n",
     "<summary>\n",
-    "\n",
     "Mathematical detail\n",
-    "\n",
     "</summary>\n",
+    "\n",
     "\n",
     "$L_n[\\frac{1}{3}, (\\frac{64}{9})^{(\\frac{1}{3})}] = e^{[((\\frac{64}{9})^{(\\frac{1}{3})} + o(1)) (log(n))^{\\frac{1}{3}}(log(log(n))^{\\frac{2}{3}})]}$\n",
     "\n",
@@ -1335,11 +1327,8 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "\n",
     "<summary>\n",
-    "\n",
     "Mathematical explanation of Shor's algorithm\n",
-    "\n",
     "</summary>\n",
     "\n",
     "In the context of [RSA][rsa], [Shor's algorithm][shor] works by exploiting the [periodicity][period] of the [modular exponential function][modexp] $f(x) = a^x (mod~n)$ and provides a quantum [period][period]-finding primitive that enables efficient prime factorization of the [modulus][modulus] $n$.\n",
@@ -1391,7 +1380,9 @@
     "\n",
     "In the following code cells, we illustrate an example of finding a private key given only the public key. This will use brute-force classical computation, but shows how Shor's algorithm could be used - including large keys.\n",
     "\n",
-    "> Note: In this section we will show the math calculations in detail as part of the Python code\n",
+    "<Admonition type=\"note\">\n",
+    "In this section we will show the math calculations in detail as part of the Python code\n",
+    "</Admonition>\n",
     "\n",
     "In the example, we have a public key $(5, 247)$, and we will recover the private key.\n",
     "\n",
@@ -1660,14 +1651,12 @@
     "\n",
     "*Figure 1. Diffie-Hellman key exchange*\n",
     "\n",
-    "\n",
     "<details>\n",
     "\n",
     "<summary>\n",
-    "\n",
     "Mathematical details of Diffie-Hellman key exchange\n",
-    "\n",
     "</summary>\n",
+    "\n",
     "With Alice and Bob being the two parties communicating, the protocol works as follows:\n",
     "\n",
     "- First, Alice and Bob agree on a large prime number $p$ and a primitive root or generator $a$.\n",
@@ -1698,7 +1687,9 @@
     "\n",
     "Let's look at a simple example of the DH protocol in Python using small prime numbers:\n",
     "\n",
-    "> Note: In this section we will show the math calculations in detail as part of the Python code\n",
+    "<Admonition type=\"note\">\n",
+    "In this section we will show the math calculations in detail as part of the Python code\n",
+    "</Admonition>\n",
     "\n",
     "**Step 1:** Alice and Bob agree on a prime $p$ and a primitive root $a$. Let's choose $p=11, a=7$."
    ]
@@ -1793,9 +1784,7 @@
     "<details>\n",
     "\n",
     "<summary>\n",
-    "\n",
     "Mathematical details of DH security and MITM attacks\n",
-    "\n",
     "</summary>\n",
     "\n",
     "In this scenario, a third party — say, Eve — intercepts the public keys $h_A, h_B$ during transmission and substitutes her own public key $h_E$ for each of $h_A$ and $h_B$ before forwarding them along to Bob and Alice, respectively.\n",
@@ -1842,11 +1831,8 @@
     "   From this we choose a random number $x$ as private key, and are able to calculate a public key $y$\n",
     "\n",
     "   <details>\n",
-    "\n",
     "   <summary>\n",
-    "\n",
     "   Mathematical details of key generation\n",
-    "\n",
     "   </summary>\n",
     "\n",
     "   - **Parameter generation:** Mathematically, DSA involves a cyclic subgroup of $(\\mathbb{Z}_p)^{\\times}$ generated by an element $g$ of prime order q < p. The first step in the DSA is therefore to select two primes p, q to set up the necessary mathematical structures.\n",
@@ -1894,11 +1880,8 @@
     "   - The message and signature are both now sent to the recipient\n",
     "\n",
     "   <details>\n",
-    "\n",
     "   <summary>\n",
-    "\n",
     "   Mathematical details of signing a message\n",
-    "\n",
     "   </summary>\n",
     "\n",
     "   The signer signs a message $m$ as follows:\n",
@@ -1929,11 +1912,8 @@
     "   and seeks to ascertain that the signer is someone with access to the private key $x$.\n",
     "\n",
     "   <details>\n",
-    "\n",
     "   <summary>\n",
-    "\n",
     "   Mathematical details of DSA verification scheme\n",
-    "\n",
     "   </summary>\n",
     "\n",
     "   - Verify that $0 \\lt r \\lt q$ and $0 \\lt s \\lt q$, that is, $r, s$ are valid modulo~q integers.\n",
@@ -1974,7 +1954,9 @@
    "source": [
     "In this example, we'll use small primes to illustrate the DSA process in a scenario where Alice sends a signed message to Bob. We'll use small integers in this example. A real-world scenario would employ much larger primes on the order of 2048-3072 bits.\n",
     "\n",
-    "> You can try rerunning this example with different values to see how the algorithm behaves, but ensure you start running from the first cell in this section.\n",
+    "<Admonition type=\"note\">\n",
+    "You can try rerunning this example with different values to see how the algorithm behaves, but ensure you start running from the first cell in this section.\n",
+    "</Admonition>\n",
     "\n",
     "We start by importing necessary libraries and choosing our parameters."
    ]
@@ -2516,11 +2498,8 @@
     "Shor's algorithm is able to solve the discrete logarithm problem in polynomial time. It primarily achieves its efficiency by using quantum algorithms which can find the period of a function which depends on the input to the problem - which is then combined with more conventional operations.\n",
     "\n",
     "<details>\n",
-    "\n",
     "<summary>\n",
-    "\n",
     "Mathematical details of Shor's algorithm\n",
-    "\n",
     "</summary>\n",
     "\n",
     "Shor's algorithm provides an efficient solution to the DLP by mapping it to a more general problem in group theory known as the [hidden subgroup problem][80] (HSP).\n",
@@ -2581,11 +2560,8 @@
     "Elliptic curve cryptography makes use of applying a series of arithmetic operations to points on the curve. Each effectively navigates to a new point on the curve. This is a simple process to follow in one direction, and with shorter key sizes is more efficient than other algorithms like RSA, but trying to reverse this is very difficult, hence its application to cryptography.\n",
     "\n",
     "<details>\n",
-    "\n",
     "<summary>\n",
-    "\n",
     "Mathematical principles of elliptic curve cryptography\n",
-    "\n",
     "</summary>\n",
     "\n",
     "An [elliptic curve][82] over an algebraic field $K$ is defined by a mathematical equation, typically in the form $y^2 = x^3 + ax + b$ with the coefficients $a, b \\in K$ and describes points $(x, y) \\in K \\otimes K$ with the additional requirement that the curve have no kinks or self-intersections.\n",
@@ -2624,11 +2600,8 @@
     "This problem is known to be intractable on classical computers for large $n$ and provides a basis for cryptographic security.\n",
     "\n",
     "<details>\n",
-    "\n",
     "<summary>\n",
-    "\n",
     "Mathematical description of ECDLP\n",
-    "\n",
     "</summary>\n",
     "\n",
     "Elliptic curve cryptography is primarily based on the ECDLP formulated on certain algebraic **finite fields**. In 1999, NIST recommended ten finite fields for use in ECC. These are:\n",
