--- a/docs/migration-guides/qiskit-1.0-installation.mdx
+++ b/docs/migration-guides/qiskit-1.0-installation.mdx
@@ -452,10 +452,11 @@ When you're done with a virtual environment, you can simply delete its directory
 
 When running `import qiskit`, you might see an error such as:
 
-> ImportError: Qiskit is installed in an invalid environment that has both Qiskit 1.0+ and an earlier version.
-> You should create a new virtual environment, and ensure that you do not mix dependencies between Qiskit pre-1.0 and post-1.0.
-> Any packages that depend on 'qiskit-terra' are not compatible with Qiskit 1.0 and will need to be updated.
-> Qiskit unfortunately cannot enforce this requirement during environment resolution.
+ ImportError: Qiskit is installed in an invalid environment that has both Qiskit 1.0+ and an earlier version.
+ You should create a new virtual environment, and ensure that you do not mix dependencies between Qiskit pre-1.0 and post-1.0.
+ Any packages that depend on 'qiskit-terra' are not compatible with Qiskit 1.0 and will need to be updated.
+ Qiskit unfortunately cannot enforce this requirement during environment resolution.
+
 
 <Admonition type="tip">
 You might have run a completely valid `pip install` command, following all the recommendations in this guide, and still see this error message.
