Reformat options table

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -61,6 +61,50 @@ Scroll to see the full table.
 
 <Tabs>
   <TabItem value="Estimator" label="Estimator">
+  #### `default_shots`
+
+The total number of shots to use per circuit per configuration.
+
+Choices: Integer >= 0
+Default: None
+
+[default_shots API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
+
+xxxxx
+
+#### `dynamical_decoupling`
+
+Description................
+
+[dynamical_decoupling API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
+
+##### Suboption: `enable`
+
+Choices: `True`, `False`
+Default: `False`
+
+##### Suboption: `enable`
+
+Choices: `True`, `False`
+Default: `False`
+
+##### Suboption: `enable`
+
+Choices: `True`, `False`
+Default: `False`
+
+##### Suboption: `enable`
+
+Choices: `True`, `False`
+Default: `False`
+
+  </TabItem>
+  <TabItem value="Sampler" label="Sampler">
+  </TabItem>
+</Tabs>
+
+<Tabs>
+  <TabItem value="Estimator" label="Estimator">
 | Option               | Sub-option               | Sub-sub-option          | Choices                                                                                   | Default                   | Option               |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|----------------------|
 | [default_shots](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)        |                          |         | Integer >= 0| None           | default_shots        |
