--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -61,24 +61,24 @@ Scroll to see the full table.
 
 <Tabs>
   <TabItem value="Estimator" label="Estimator">
-  #### `default_shots`
+  #### [default_shots](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
 
 The total number of shots to use per circuit per configuration.
 
 Choices: Integer >= 0
 Default: None
 
-[default_shots API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_shots)
+
 
 xxxxx
 
-#### `dynamical_decoupling`
+#### [`dynamical_decoupling`](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
 
 Description................
 
-[dynamical_decoupling API documentation](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
 
-##### Suboption: `enable`
+
+##### `dynamical_decoupling.enable`
 
 Choices: `True`, `False`
 Default: `False`
@@ -100,6 +100,7 @@ Default: `False`
 
   </TabItem>
   <TabItem value="Sampler" label="Sampler">
+  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
   </TabItem>
 </Tabs>
 
