--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d59dffe0-85cb-4849-8421-03bbcc9668df",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
    "source": [
     "from qiskit.primitives import StatevectorSampler, StatevectorEstimator\n",
     "from qiskit.result import QuasiDistribution\n",
-    "from qiskit.circuit.library import IGate, ZGate, XGate\n",
+    "from qiskit.circuit.library import IGate, ZGate, XGate, YGate\n",
     "import numpy as np\n",
     "\n",
     "\n",
@@ -324,36 +324,35 @@
     "shots = 10000\n",
     "sampler = StatevectorSampler()\n",
     "job = sampler.run(aux_circuits, shots=shots)\n",
-    "data_pub = job.result()[1].data\n",
-    "bitstrings = data_pub.meas.get_bitstrings()\n",
-    "counts = data_pub.meas.get_counts()\n",
-    "quasi_dist = QuasiDistribution(\n",
-    "    {outcome: freq / shots for outcome, freq in counts.items()}\n",
+    "\n",
+    "#Run the sampler job and step through results\n",
+    "expvals = []\n",
+    "for index, pauli in enumerate(H.paulis):\n",
+    "    data_pub = job.result()[index].data\n",
+    "    bitstrings = data_pub.meas.get_bitstrings()\n",
+    "    counts = data_pub.meas.get_counts()\n",
+    "    quasi_dist = QuasiDistribution(\n",
+    "        {outcome: freq / shots for outcome, freq in counts.items()}\n",
     ")\n",
     "\n",
-    "expvals = []\n",
-    "for pauli in H.paulis:\n",
+    "#Use the probabilities and known eigenvalues of Pauli operators to estimate the expectation value.\n",
     "    val = 0\n",
     "\n",
-    "    if str(pauli) == \"I\":\n",
-    "        Lambda = IGate().to_matrix().real\n",
-    "\n",
     "    if str(pauli) == \"X\":\n",
-    "        Lambda = XGate().to_matrix().real\n",
-    "        val += Lambda[0][1] * quasi_dist.get(1)\n",
-    "        val += Lambda[1][0] * quasi_dist.get(0)\n",
+    "        val += -1 * quasi_dist.get(1,0)\n",
+    "        val += 1 * quasi_dist.get(0,0)\n",
     "\n",
     "    if str(pauli) == \"Y\":\n",
-    "        Lambda = XGate().to_matrix().real\n",
-    "        val += Lambda[0][1] * 1.0j * quasi_dist.get(1)\n",
-    "        val += Lambda[1][0] * -1.0j * quasi_dist.get(0)\n",
+    "        val += -1 * quasi_dist.get(1,0)\n",
+    "        val += 1* quasi_dist.get(0,0)\n",
     "\n",
     "    if str(pauli) == \"Z\":\n",
-    "        Lambda = ZGate().to_matrix().real\n",
-    "        val += Lambda[0][0] * quasi_dist.get(0)\n",
-    "        val += Lambda[1][1] * quasi_dist.get(1)\n",
+    "        val += 1 * quasi_dist.get(0,0)\n",
+    "        val += -1 * quasi_dist.get(1,0)\n",
     "\n",
     "    expvals.append(val)\n",
+    "\n",
+    "#Print expectation values\n",
     "\n",
     "print(\"Sampler results:\")\n",
     "for pauli, expval in zip(H.paulis, expvals):\n",
@@ -362,7 +361,7 @@
     "total_expval = np.sum(H.coeffs * expvals).real\n",
     "print(f\"  >> Total expected value: {total_expval:.5f}\")\n",
     "\n",
-    "## ESTIMATOR\n",
+    "#Use estimator for comparison\n",
     "observables = [\n",
     "    *H.paulis,\n",
     "    H,\n",
@@ -372,6 +371,7 @@
     "job = estimator.run([(original_circuit, observables)])\n",
     "estimator_expvals = job.result()[0].data.evs\n",
     "\n",
+    "#Print results\n",
     "print(\"Estimator results:\")\n",
     "for obs, expval in zip(observables, estimator_expvals):\n",
     "    if obs is not H:\n",
