--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -324,7 +324,7 @@
     "sampler = StatevectorSampler()\n",
     "job = sampler.run(aux_circuits, shots=shots)\n",
     "\n",
-    "#Run the sampler job and step through results\n",
+    "# Run the sampler job and step through results\n",
     "expvals = []\n",
     "for index, pauli in enumerate(H.paulis):\n",
     "    data_pub = job.result()[index].data\n",
@@ -332,26 +332,26 @@
     "    counts = data_pub.meas.get_counts()\n",
     "    quasi_dist = QuasiDistribution(\n",
     "        {outcome: freq / shots for outcome, freq in counts.items()}\n",
-    ")\n",
+    "    )\n",
     "\n",
-    "#Use the probabilities and known eigenvalues of Pauli operators to estimate the expectation value.\n",
+    "    # Use the probabilities and known eigenvalues of Pauli operators to estimate the expectation value.\n",
     "    val = 0\n",
     "\n",
     "    if str(pauli) == \"X\":\n",
-    "        val += -1 * quasi_dist.get(1,0)\n",
-    "        val += 1 * quasi_dist.get(0,0)\n",
+    "        val += -1 * quasi_dist.get(1, 0)\n",
+    "        val += 1 * quasi_dist.get(0, 0)\n",
     "\n",
     "    if str(pauli) == \"Y\":\n",
-    "        val += -1 * quasi_dist.get(1,0)\n",
-    "        val += 1* quasi_dist.get(0,0)\n",
+    "        val += -1 * quasi_dist.get(1, 0)\n",
+    "        val += 1 * quasi_dist.get(0, 0)\n",
     "\n",
     "    if str(pauli) == \"Z\":\n",
-    "        val += 1 * quasi_dist.get(0,0)\n",
-    "        val += -1 * quasi_dist.get(1,0)\n",
+    "        val += 1 * quasi_dist.get(0, 0)\n",
+    "        val += -1 * quasi_dist.get(1, 0)\n",
     "\n",
     "    expvals.append(val)\n",
     "\n",
-    "#Print expectation values\n",
+    "# Print expectation values\n",
     "\n",
     "print(\"Sampler results:\")\n",
     "for pauli, expval in zip(H.paulis, expvals):\n",
@@ -360,17 +360,17 @@
     "total_expval = np.sum(H.coeffs * expvals).real\n",
     "print(f\"  >> Total expected value: {total_expval:.5f}\")\n",
     "\n",
-    "#Use estimator for comparison\n",
+    "# Use estimator for comparison\n",
     "observables = [\n",
     "    *H.paulis,\n",
     "    H,\n",
-    "] # Note: run for individual Paulis as well as full observable H\n",
+    "]  # Note: run for individual Paulis as well as full observable H\n",
     "\n",
     "estimator = StatevectorEstimator()\n",
     "job = estimator.run([(original_circuit, observables)])\n",
     "estimator_expvals = job.result()[0].data.evs\n",
     "\n",
-    "#Print results\n",
+    "# Print results\n",
     "print(\"Estimator results:\")\n",
     "for obs, expval in zip(observables, estimator_expvals):\n",
     "    if obs is not H:\n",
@@ -1500,7 +1500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3"
   },
   "title": "Cost functions"
  },
