--- a/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/single-systems/classical-information.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "## Measuring probabilistic states\n",
     "\n",
-    "Next let us consider what happens if we *measure* a system when it is in a probabilistic state. In this context, by measuring a system we simply mean that we look at the system and recognize whatever classical state it is in without unambiguity. Intuitively speaking, we can't \"see\" a probabilistic state of a system; when we look at it, we just see one of the possible classical states.\n",
+    "Next let us consider what happens if we *measure* a system when it is in a probabilistic state. In this context, by measuring a system we simply mean that we look at the system and recognize whatever classical state it is in without ambiguity. Intuitively speaking, we can't \"see\" a probabilistic state of a system; when we look at it, we just see one of the possible classical states.\n",
     "\n",
     "By measuring a system, we may also change our knowledge of it, and therefore the probabilistic state we associate with it can change.\n",
     "That is, if we recognize that $\\mathsf{X}$ is in the classical state $a\\in\\Sigma,$ then the new probability vector representing our knowledge of the state of $\\mathsf{X}$ becomes the vector having a $1$ in the entry corresponding to $a$ and $0$ for all other entries.\n",
