--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -1,7 +1,8 @@
 ---
 title: Introduction to options
 description: Available options for building with Qiskit Runtime primitives
-
+in_page_toc_min_heading_level: 4
+in_page_toc_max_heading_level: 4
 ---
 
 # Introduction to options
