fix broken links

--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -16,7 +16,7 @@ To find the native gates and operations of a backend, use [this code](/docs/guid
 
 ![Heron processor icon](/docs/images/guides/processor-types/heron.svg)
 
-At 156 qubits, Heron is an [Eagle](#eagle)-sized upgrade to [Egret](#egret) that pulls in substantial innovations in signal delivery that were previously deployed in [Osprey](#osprey). The signals required to enable the fast, high-fidelity two-qubit and single-qubit control are delivered with high-density flex cabling.
+At 156 qubits, Heron is an [Eagle](#eagle)-sized upgrade to Egret that pulls in substantial innovations in signal delivery that were previously deployed in Osprey. The signals required to enable the fast, high-fidelity two-qubit and single-qubit control are delivered with high-density flex cabling.
 
 *   [View available Heron processors](https://quantum.cloud.ibm.com/computers?processorType=Heron)
 
