--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/phase-estimation-procedure.ipynb
@@ -738,7 +738,7 @@
     "=\n",
     "\\begin{cases}\n",
     "2^m & \\theta = y/2^m\\\\[2mm]\n",
-    "\\frac{e^{2\\pi (2^m \\theta - y)} - 1}{e^{2\\pi (\\theta - y/2^m)} - 1}\n",
+    "\\frac{e^{2\\pi i (2^m \\theta - y)} - 1}{e^{2\\pi i (\\theta - y/2^m)} - 1}\n",
     "& \\theta\\neq y/2^m\n",
     "\\end{cases}\n",
     "$$\n",
