--- a/docs/api/qiskit-ibm-transpiler/0.13/ai-ai-permutation-synthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.13/ai-ai-permutation-synthesis.mdx
@@ -1,6 +1,6 @@
 ---
-title: AIPermutationSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AIPermutationSynthesis in the latest version of qiskit-ibm-transpiler
+title: AIPermutationSynthesis (v0.13)
+description: API reference for qiskit_ibm_transpiler.ai.AIPermutationSynthesis in qiskit-ibm-transpiler v0.13
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
 # AIPermutationSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/synthesis.py#L288-L332" signature="qiskit_ibm_transpiler.ai.AIPermutationSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/synthesis.py#L288-L332" signature="qiskit_ibm_transpiler.ai.AIPermutationSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
   Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
@@ -72,7 +72,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/synthesis.py#L161-L178" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/synthesis.py#L161-L178" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -86,7 +86,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/synthesis.py#L114-L159" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/synthesis.py#L114-L159" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
