--- a/docs/api/qiskit-ibm-transpiler/0.13/ai-collect-cliffords.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.13/ai-collect-cliffords.mdx
@@ -1,23 +1,23 @@
 ---
-title: CollectPermutations (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in the latest version of qiskit-ibm-transpiler
+title: CollectCliffords (v0.13)
+description: API reference for qiskit_ibm_transpiler.ai.CollectCliffords in qiskit-ibm-transpiler v0.13
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
+python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 ---
 
-# CollectPermutations
+# CollectCliffords
 
-<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/collection.py#L477-L514" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectCliffords" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/collection.py#L397-L434" signature="qiskit_ibm_transpiler.ai.CollectCliffords(do_commutative_analysis: bool = True, min_block_size: int = 2, max_block_size: int = CLIFFORD_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
-  Collects blocks of SWAP circuits as Permutations.
+  Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.
 
   **Parameters**
 
   *   **do\_commutative\_analysis** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – Enable or disable commutative analysis, defaults to True
-  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect permutations pass, defaults to 4.
-  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect permutations pass, defaults to 12.
+  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect Cliffords pass, defaults to 2.
+  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect Cliffords pass, defaults to 9.
   *   **collect\_from\_back** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Specify if collect blocks in reverse order or not, defaults to False.
   *   **num\_reps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Specify how many times to repeat the optimization process, defaults to 10.
   *   **collect\_function** (*callable*) – a function that takes a DAG and returns a list of “collected” blocks of nodes
@@ -28,7 +28,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### is\_analysis\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.CollectPermutations.is_analysis_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.CollectCliffords.is_analysis_pass">
     Check if the pass is an analysis pass.
 
     If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
@@ -36,7 +36,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### is\_transformation\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.CollectPermutations.is_transformation_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.CollectCliffords.is_transformation_pass">
     Check if the pass is a transformation pass.
 
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
@@ -46,7 +46,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -66,7 +66,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -76,7 +76,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/collection.py#L370-L394" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/collection.py#L370-L394" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
@@ -90,7 +90,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
