--- a/docs/api/qiskit-ibm-transpiler/0.13/ai-collect-permutations.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.13/ai-collect-permutations.mdx
@@ -1,6 +1,6 @@
 ---
-title: CollectPermutations (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in the latest version of qiskit-ibm-transpiler
+title: CollectPermutations (v0.13)
+description: API reference for qiskit_ibm_transpiler.ai.CollectPermutations in qiskit-ibm-transpiler v0.13
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
 # CollectPermutations
 
-<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/collection.py#L477-L514" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectPermutations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/collection.py#L477-L514" signature="qiskit_ibm_transpiler.ai.CollectPermutations(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = PERMUTATION_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
   Collects blocks of SWAP circuits as Permutations.
@@ -76,7 +76,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectPermutations
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.14/qiskit_ibm_transpiler/ai/collection.py#L370-L394" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectPermutations.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/ai/collection.py#L370-L394" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
