Remove reference to pulse

--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -307,16 +307,6 @@
    "source": [
     "## Basis gates\n",
     "\n",
-    "<Admonition type=\"danger\" title='Removal of pulse support'>\n",
-    "\n",
-    " Pulse-level control on __all__ IBM Quantum&reg; processors has been removed and will __not work correctly__ using these QPUs.\n",
-    "\n",
-    " If you were using pulse schedules to execute single- and two-qubit rotations, use the new [fractional gates](/docs/guides/fractional-gates) feature. Alternatively, if you would like to simulate pulse schedules for your work, try the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package.\n",
-    "\n",
-    "Additionally, the `qiskit.pulse` module has been **removed** as of Qiskit SDK v2.0.0. See the [pulse migration guide](/docs/migration-guides/pulse-migration) for more information.\n",
-    "\n",
-    "</Admonition>\n",
-    "\n",
     "Every quantum computer supports a limited instruction set, called its _basis gates_.  Every gate in the circuit must be translated to the elements of this set. This set should consist of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates.  This is done by the [BasisTranslator](../api/qiskit/qiskit.transpiler.passes.BasisTranslator), and the basis gates can be specified as a keyword argument to the transpiler to provide this information."
    ]
   },
@@ -344,7 +334,8 @@
    "id": "6e9aed06",
    "metadata": {},
    "source": [
-    "The default single-qubit gates on _ibm_sherbrooke_ are `rz`, `x`, and `sx`, and the default two-qubit gate is `ecr` (echoed cross-resonance). CX gates are constructed from `ecr` gates, so on some QPUs `ecr` is specified as the two-qubit basis gate, while on others `cx` is the default. The `ecr` gate is the _entangling_ part of the `cx` gate. To use a gate that is not in the basis gate set, follow instructions in the Qiskit SDK API documentation for custom gates using [pulse gates](/docs/api/qiskit/1.4/qiskit.transpiler.passes.PulseGates#pulsegates). In addition to the control gates, there are also `delay` and `measurement` instructions.\n",
+    "The default single-qubit gates on _ibm_sherbrooke_ are `rz`, `x`, and `sx`, and the default two-qubit gate is `ecr` (echoed cross-resonance). CX gates are constructed from `ecr` gates, so on some QPUs `ecr` is specified as the two-qubit basis gate, while on others `cx` is the default. The `ecr` gate is the _entangling_ part of the `cx` gate. In addition to the control gates, there are also `delay` and `measurement` instructions.\n",
+    "\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "    QPUs have default basis gates, but you can choose whatever gates you want, as long as you provide the instruction or add pulse gates (see [Create transpiler passes.](custom-transpiler-pass)) The default basis gates are those that calibrations have been done for on the QPU, so no further instruction/pulse gates need to be provided. For example, on some QPUs `cx` is the default two-qubit gate and `ecr` on others. See the list of possible [native gates and operations](/docs/guides/qpu-information#native-gates) for more details.\n",
