--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -27,10 +27,11 @@
    "source": [
     "The Qiskit Transpiler Service provides transpilation capabilities on the cloud. In addition to the local Qiskit transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum&reg; cloud resources and AI-powered transpiler passes.\n",
     "\n",
-    "The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows.\n",
+    "The Qiskit Transpiler Service offers a Python library to seamlessly integrate this service and its capabilities into your current Qiskit patterns and workflows. This service is only available for IBM Quantum Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users.\n",
     "\n",
-    "<Admonition type=\"note\">\n",
-    "    This service is only available for IBM Quantum Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. As of 18 July 2025, the service is being migrated and might not be available. For AI passes, you can use [local mode](/docs/guides/ai-transpiler-passes#run-the-ai-transpiler-passes-locally-or-on-the-cloud).\n",
+    "<Admonition type=\"danger\" title=\"Transpiler Service Migration\">\n",
+    "     As of 18 July 2025, the service is being migrated to support the new IBM Quantum Platform and may not be available. For AI passes, you can use [local mode](/docs/guides/ai-transpiler-passes#run-the-ai-transpiler-passes-locally-or-on-the-cloud).\n",
+    "\n",
     "    The service is a beta release, subject to change.\n",
     "    If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace](https://qiskit.slack.com/archives/C06KF8YHUAU) channel.\n",
     "</Admonition>\n",
@@ -80,7 +81,7 @@
     "circuit = efficient_su2(101, entanglement=\"circular\", reps=1)\n",
     "\n",
     "cloud_transpiler_service = TranspilerService(\n",
-    "    backend_name=\"ibm_torino\",\n",
+    "    backend_name=\"ibmq_dublin\",\n",
     "    ai=\"false\",\n",
     "    optimization_level=3,\n",
     ")\n",
