3rd vs 4th levels

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -73,47 +73,81 @@ The total number of shots to use per circuit per configuration.
 **Default**: None
 </details>
 
+<details>
+<summary>
 #### [`default_precision`](/docs/api/qiskit-ibm-runtime/options-estimator-options#default_precision)
+</summary>
 
 The default precision to use for any PUB or `run()` call that does not specify one.
 
 **Choices**: Float > 0
 **Default**: 0.015625 (1 / sqrt(4096))
+</details>
 
-
+<details>
+<summary>
 #### [`dynamical_decoupling`](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
+</summary>
 
 Control dynamical decoupling error mitigation settings.
 
+</details>
+
+<details>
+<summary>
 ##### `dynamical_decoupling.enable`
+</summary>
 
 **Choices**: `True`, `False`
 **Default**: `False`
+</details>
 
+<details>
+<summary>
 ##### `dynamical_decoupling.extra_slack_distribution`
+</summary>
 
 **Choices**: `middle`, `edges`
 **Default**: `middle`
+</details>
 
+<details>
+<summary>
 ##### `dynamical_decoupling.scheduling_method`
+</summary>
 
 Choices: `asap`, `alap`
 Default: `alap`
+</details>
 
+<details>
+<summary>
 ##### `dynamical_decoupling.sequence_type`
+</summary>
 
 Choices: `XX`, `XpXm`, `XY4`
 Default: `XX`
+</details>
 
+<details>
+<summary>
 ##### `dynamical_decoupling.skip_reset_qubits`
+</summary>
 
 Choices: `True`, `False`
 Default: `False`
-
+</details>
 
   </TabItem>
   <TabItem value="Sampler" label="Sampler">
-  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+<details>
+<summary>
+#### [`dynamical_decoupling`](/docs/api/qiskit-ibm-runtime/options-estimator-options#dynamical_decoupling)
+</summary>
+
+Control dynamical decoupling error mitigation settings.
+
+</details>
   </TabItem>
 </Tabs>
 
